...
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:visibility="@{viewModel.passwordMode ? View.VISIBLE : View.GONE, default=visible}">

                        <EditText
                            style="@style/default_text_style"
                            android:id="@+id/mango9_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="username"
                            android:background="@drawable/mango9_login_field_background"
                            android:hint="@string/mango9_username_hint"
                            android:imeOptions="actionNext"
...
                                app:tint="@color/gray_main2_600" />
                        </FrameLayout>
                    </LinearLayout>

                    <EditText
                        style="@style/default_text_style"
                        android:id="@+id/mango9_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/mango9_login_field_background"
                        android:hint="@string/mango9_email_hint"
...
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp">

                        <TextView
                            style="@style/primary_button_label_style"
                            android:id="@+id/mango9_primary_action"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/mango9_login_primary_button_background"
                            android:enabled="@{viewModel.primaryActionEnabled}"
                            android:gravity="center"
                            android:onClick="@{() -> viewModel.primaryAction()}"
...
