...
                        </LinearLayout>
                    </LinearLayout>

                    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?attr/color_grey_100" />

                    <LinearLayout
                        android:id="@+id/licensing_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
...
